syntax = "proto3";

package greeting.v1;

option java_multiple_files = true;
option java_package = "com.example.greeting.v1";
option java_outer_classname = "GreetingProto";

service GreetingService {
  rpc greet (GreetRequest) returns (GreetResponse);
}

message GreetRequest {
  string name = 1;
}

message GreetResponse {
  string message = 1;
}
